# flux-runtime-san

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml
docs/: design.md
examples/: Suryasiddhanta.flux
for-fleet/: health-check-2026-04-12_171948.json
src/flux_runtime_san.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/flux_san/: __init__.py  bridge_adapter.py  cli.py  code_merger.py  dhatu.py  dhatu_resolver.py  interpreter.py  lakara.py  samasa.py  sandhi.py  scope_manager.py  vibhakti.py  vm.py
src/flux_san/vocabulary/: __init__.py  a2a.ese  math.ese
tests/: test_interpreter_san.py
